recursion.lessons.recursion.tree.Tree.scala.error
Tree:11: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters length, angle, shrink.
tree(s-1)
    ^